# fedmat

./: .gitignore  Makefile  README.md  pyproject.toml
nb/: perf.ipynb  perm.ipynb
paper/: main.bib  main.typ
src/fedmat/: __init__.py  config.py  data.py  dist_train.py  distributed_context.py  evaluate.py  fedutils.py  matching.py  permute.py  sim.py  train.py  train_fed_streams.py  train_utils.py  utils.py
src/fedmat/configs/: __init__.py  base.yaml  experiment.yaml  fedavg-scratch-imagenet1k.yaml  fedavg-scratch-tuned.yaml  fedavg-scratch.yaml  greedy-scratch-tuned.yaml  greedy-scratch.yaml  hungarian-scratch-tuned.yaml  hungarian-scratch.yaml  mp.ipynb  plz.yaml
src/fedmat/configs/matcher/: greedy.yaml  hungarian.yaml
tests/: matcher.py  test_matcher.py  test_stream_parallelism.py  test_train_utils.py
